# clarvis

./: .coverage  .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  AGENTS.md.example  BOOT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY_BOARD.md  DELIVERY_LOCK.md  Dockerfile  EVOLUTION_PLAN.md  Final_ClarvisDB.md  HEARTBEAT.md  IDENTITY.md  IDENTITY.md.example  MEMORY.md  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SELF.md  SOUL.md  SOUL.md.example  TOOLS.md  USER.md  USER.md.example  VERSION.md  boot.md  docker-compose.yml  metrics-baseline.md  pyproject.toml
.clawhub/: lock.json
.github/: pull_request_template.md
.openclaw/: workspace-state.json
clarvis/: __init__.py  __main__.py  _script_loader.py  cli.py  cli_bench.py  cli_brain.py  cli_cognition.py  cli_context.py  cli_cost.py  cli_cron.py  cli_demo.py  cli_design.py  cli_doctor.py  cli_heartbeat.py  cli_hooks.py  cli_local.py  cli_maintenance.py  cli_metrics.py  cli_mode.py  cli_queue.py  cli_welcome.py  cli_wiki.py  research_config.py
clarvis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: mcporter.json
data/: challenge_feed.json  challenge_feed_state.json  golden_qa.json  phi_regression_baseline.json
docs/: ADAPTIVE_RAG_PLAN.md  ADOPTION_MATRIX.md  AGI_READINESS_ARCHITECTURE_AUDIT.md  ARCHITECTURE.md  ARCH_AUDIT_2026-03-05.md  BENCHMARK_SCORECARD.md  BRAIN_EVOLUTION.md  CLARVISDB.md  CLARVISDB_API_BOUNDARY.md  CLARVISDB_EXTRACTION_PLAN.md  CLARVISP_API_BOUNDARY.md  CLARVIS_CONTEXT_ENGINE.md  CLARVIS_MODES_AND_REPOS.md  CLAUDE_DESIGN_ROUTINES_STRATEGY.md  CLAUDE_SPAWN_RELAY_INVESTIGATION_2026-04-09.md  CLAW_EMPIRE_VISUALS_NOTES_2026-03-06.md  CLI_MIGRATION_PLAN.md  CLR_BENCHMARK_SCHEMA.md  CLR_PHIID_BENCHMARK_PLAN.md  COMPOSIO_ANALYSIS_INDEX.md  CONSOLIDATION_PLAN.md  CONTEXT_ENGINE_CONSOLIDATION_PLAN.md  CONTRIBUTING.md  CONVENTIONS.md  CRON_LANES.md  CRON_OUTPUT_AUDIT.md  CRON_TIMEOUT_AUDIT_2026-04-13.md  DASHBOARD.md  DATA_LAYOUT.md  DECOMPOSITION_REMEDIATION_AND_STRUCTURAL_POLICY_PLAN_2026-03-29.md  DELIVERY_BURNDOWN.md  DELIVERY_CHECKLIST.md  DOC_STACK.md  DO_NOT_TOUCH_REGISTRY.md  E2E_RELEASE_VALIDATION_PLAN.md  EMERGENCY_AUDIT_2026-03-29.md  EXTRACTION_GATES.md  FINAL_VERIFICATION_REPORT_2026-04-09.md  FORK_INTEGRATION_PLAN_2026-03-15.md  GRAPH_SQLITE_CUTOVER_2026-03-29.md  (+88 more)
knowledge/: README.md  index.md
memory/: 2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23-2155.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  (+22 more)
(+1628 files in other folders)
