[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clarvis"
version = "0.1.0"
description = "Clarvis — dual-layer cognitive agent system"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
clarvis = "clarvis.cli:main"

[project.optional-dependencies]
brain = ["chromadb>=0.4.0", "onnxruntime>=1.15.0"]

[tool.setuptools.packages.find]
include = ["clarvis*"]
