[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clarvis"
version = "0.1.0"
description = "Clarvis — dual-layer cognitive agent system"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "clarvis-cost",
    "clarvis-reasoning",
]

[project.scripts]
clarvis = "clarvis.cli:main"

[project.optional-dependencies]
brain = ["chromadb>=0.4.0", "onnxruntime>=1.15.0"]

[tool.setuptools.packages.find]
include = ["clarvis*"]
exclude = ["packages*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# Start strict on critical errors only; expand over time
select = ["E9", "F63", "F7", "F82"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["clarvis/tests", "packages"]
norecursedirs = ["scripts", "data", "memory", "monitoring", "skills", "docs", ".git"]
markers = [
    "slow: marks tests that need ChromaDB (deselect with '-m \"not slow\"')",
]
